--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(auth)/signin/page.jsx", "src/app/(auth)/signup/page.jsx", "src/app/layout.jsx", "src/app/page.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(auth)/signin/page.jsx", "src/app/(auth)/signup/page.jsx", "src/app/layout.jsx", "src/app/page.jsx", "src/context/UserContext.js"],
   "exclude": ["node_modules"]
 }
