--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
