going for deployment-7

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ MONGO_CONN=mongodb+srv://admin:mAZBf8lxFk1JShxa@cluster0.hdhjs.mongodb.net/Inter
 JWT_SECRET=secret-123
 PORT=8000
 
-BASE_URL = http://localhost:8000/
+BASE_URL = https://intern-assignment-frontend-1m0dc94jj.vercel.app/
 HOST = smtp.gmail.com
 HOST = nishant.1703.developer@gmail.com
 SERVICE = gmail
